Added step by step.

--- a/Convolutional.ipynb
+++ b/Convolutional.ipynb
@@ -87,7 +87,7 @@
     "# A grey scall image would have one, RGB would have 3\n",
     "input_channel = 1\n",
     "\n",
-    "# Number of channels to produce. With data aggregated, each channel \n",
+    "# Number of channels to produce. Each layer serves as a shape recognisers.\n",
     "output_channel = 4"
    ]
   },
