Added a finall ANN with docs.

--- a/tensor_step_by_step.ipynb
+++ b/tensor_step_by_step.ipynb
@@ -217,14 +217,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Version 2: Another layer and better starting points\n",
-    "# This section will add another layer of nodes in the middle (a hidden layer).\n",
-    "# New starting points for weights and biases"
+    "## Version 2: Another layer and better starting points\n",
+    "* This section will add another layer of nodes in the middle (a hidden layer).\n",
+    "* New starting points for weights and biases"
    ]
   },
   {
@@ -238,15 +236,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Weights and Bias (v2)\n",
+    "* Adding Layers: The more layers, the more filters to pick up features in your data.\n",
+    "* Weights: truncated_normal() is used to provide various starting weights.\n",
+    "* Bias: tf.ones() is now used giving the init values an average starting point instead of zero"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Weights and Bias (v2)\n",
-    "# - Adding Layers: The more layers, the more filters to pick up features in your data.\n",
-    "# - Weights: truncated_normal() is used to provide various starting weights.\n",
-    "# - Bias: tf.ones() is now used giving the init values an average starting point instead of zero\n",
     "\n",
     "W1 = tf.Variable(tf.truncated_normal([area, hidden_layer], stddev=0.1))\n",
     "W2 = tf.Variable(tf.truncated_normal([hidden_layer, final_nodes], stddev=0.1))\n",
@@ -279,14 +284,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Version 3\n",
-    "# This section will show how to add x amount of layers.\n",
-    "# NOTE: These new layers will cause a drop in accuracy. Why?"
+    "## Version 3\n",
+    "* This section will show how to add x amount of layers.\n",
+    "* **NOTE:** These new layers will cause a drop in accuracy. Why?"
    ]
   },
   {
@@ -361,16 +364,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Version 4: Function Swapping\n",
-    "# - Activation: Replaces `sigmoid` with `relu`\n",
-    "# - Loss Function: Use activatino results instead of softmax.\n",
-    "#                  Adjust function to handle 0 which `softmax` never returned\n",
-    "# - Optimizer: replace `GradientDescentOptimiser` with `AdamOptimizer`"
+    "## Version 4: Function Swapping\n",
+    "*  Activation: Replaces `sigmoid` with `relu`\n",
+    "* Loss Function: Use activatino results instead of softmax. Adjust function to handle 0 which `softmax` never returned\n",
+    "* Optimizer: replace `GradientDescentOptimiser` with `AdamOptimizer`"
    ]
   },
   {
@@ -430,14 +430,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Version 5: Learning Rates\n",
-    "# Provides a dynamic learning rate that decreases over time.\n",
-    "# - Without decay more recent data has a bigger impact."
+    "## Version 5: Learning Rates\n",
+    "* Provides a dynamic learning rate that decreases over time.\n",
+    "* Without decay more recent data has a bigger impact."
    ]
   },
   {
@@ -483,14 +481,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Version 6: Dropoff\n",
-    "# - Randomly shuts off nodes \n",
-    "# - Prevents over fitting (The network could find unrelated data important)"
+    "## Version 6: Dropoff\n",
+    "* Randomly shuts off nodes \n",
+    "* Prevents over fitting (The network could find unrelated data important)"
    ]
   },
   {
@@ -648,7 +644,8 @@
     "for i in range(len(layers)-2):\n",
     "    name = \"activate_\" + str(i)\n",
     "    Y = tf.nn.relu(tf.matmul(Y, WW[i], name=name) + BB[i])\n",
-    "    Y = tf.nn.dropout(Y, pkeep)"
+    "    Y = tf.nn.dropout(Y, pkeep)\n",
+    "    "
    ]
   },
   {
@@ -659,7 +656,7 @@
    "source": [
     "# Regression Functions\n",
     "Ylogits = tf.matmul(Y, WW[i+1]) + BB[i+1]\n",
-    "Y = tf.nn.softmax(Ylogits)"
+    "Y = tf.nn.softmax(Ylogits)\n"
    ]
   },
   {
@@ -670,7 +667,7 @@
    "source": [
     "# Loss Function\n",
     "logits = tf.nn.softmax_cross_entropy_with_logits(logits=Ylogits, labels=Y_)\n",
-    "cross_entropy = tf.reduce_mean(logits) * 100"
+    "cross_entropy = tf.reduce_mean(logits) * 100\n"
    ]
   },
   {
@@ -681,7 +678,7 @@
    "source": [
     "# Optimizer\n",
     "optimizer = tf.train.AdamOptimizer(lr)\n",
-    "train_step = optimizer.minimize(cross_entropy)"
+    "train_step = optimizer.minimize(cross_entropy)\n"
    ]
   },
   {
@@ -694,7 +691,7 @@
     "init = tf.global_variables_initializer()\n",
     "\n",
     "sess = tf.Session()\n",
-    "sess.run(init)"
+    "sess.run(init)\n"
    ]
   },
   {
@@ -714,7 +711,7 @@
     "        pkeep: 0.9\n",
     "    }\n",
     "\n",
-    "    sess.run(train_step, feed_dict=train_data)"
+    "    sess.run(train_step, feed_dict=train_data)\n"
    ]
   },
   {
@@ -725,7 +722,7 @@
    "source": [
     "# Accuracy\n",
     "is_correct = tf.equal(tf.argmax(Y, 1), tf.argmax(Y_, 1))\n",
-    "accuracy = tf.reduce_mean(tf.cast(is_correct, tf.float32))"
+    "accuracy = tf.reduce_mean(tf.cast(is_correct, tf.float32))\n"
    ]
   },
   {
@@ -745,7 +742,7 @@
     "# Testing\n",
     "test_data={X: mnist.test.images, Y_: mnist.test.labels, pkeep: 1.0}\n",
     "a,c = sess.run([accuracy, cross_entropy], feed_dict=test_data)\n",
-    "print(a)"
+    "print(a)\n"
    ]
   },
   {
