Added tensor board logging.

--- a/tensor_step_by_step.ipynb
+++ b/tensor_step_by_step.ipynb
@@ -644,8 +644,7 @@
     "for i in range(len(layers)-2):\n",
     "    name = \"activate_\" + str(i)\n",
     "    Y = tf.nn.relu(tf.matmul(Y, WW[i], name=name) + BB[i])\n",
-    "    Y = tf.nn.dropout(Y, pkeep)\n",
-    "    "
+    "    Y = tf.nn.dropout(Y, pkeep)"
    ]
   },
   {
@@ -656,7 +655,7 @@
    "source": [
     "# Regression Functions\n",
     "Ylogits = tf.matmul(Y, WW[i+1]) + BB[i+1]\n",
-    "Y = tf.nn.softmax(Ylogits)\n"
+    "Y = tf.nn.softmax(Ylogits)"
    ]
   },
   {
@@ -667,7 +666,7 @@
    "source": [
     "# Loss Function\n",
     "logits = tf.nn.softmax_cross_entropy_with_logits(logits=Ylogits, labels=Y_)\n",
-    "cross_entropy = tf.reduce_mean(logits) * 100\n"
+    "cross_entropy = tf.reduce_mean(logits) * 100"
    ]
   },
   {
@@ -678,7 +677,7 @@
    "source": [
     "# Optimizer\n",
     "optimizer = tf.train.AdamOptimizer(lr)\n",
-    "train_step = optimizer.minimize(cross_entropy)\n"
+    "train_step = optimizer.minimize(cross_entropy)"
    ]
   },
   {
@@ -691,7 +690,7 @@
     "init = tf.global_variables_initializer()\n",
     "\n",
     "sess = tf.Session()\n",
-    "sess.run(init)\n"
+    "sess.run(init)"
    ]
   },
   {
@@ -711,7 +710,7 @@
     "        pkeep: 0.9\n",
     "    }\n",
     "\n",
-    "    sess.run(train_step, feed_dict=train_data)\n"
+    "    sess.run(train_step, feed_dict=train_data)"
    ]
   },
   {
@@ -722,7 +721,7 @@
    "source": [
     "# Accuracy\n",
     "is_correct = tf.equal(tf.argmax(Y, 1), tf.argmax(Y_, 1))\n",
-    "accuracy = tf.reduce_mean(tf.cast(is_correct, tf.float32))\n"
+    "accuracy = tf.reduce_mean(tf.cast(is_correct, tf.float32))"
    ]
   },
   {
@@ -742,7 +741,7 @@
     "# Testing\n",
     "test_data={X: mnist.test.images, Y_: mnist.test.labels, pkeep: 1.0}\n",
     "a,c = sess.run([accuracy, cross_entropy], feed_dict=test_data)\n",
-    "print(a)\n"
+    "print(a)"
    ]
   },
   {
