Adding tensor board.

--- a/Convolutional_101.ipynb
+++ b/Convolutional_101.ipynb
@@ -32,9 +32,9 @@
    "outputs": [],
    "source": [
     "# Filter is the block of data (pixels) to scan an image and produce a value\n",
-    "filter = (3,3)\n",
+    "filter_size = (3,3)\n",
     "\n",
-    "# A grey scall image would have one, RGB would have 3\n",
+    "# A grey scale image would have one, RGB would have 3\n",
     "input_channel = 1\n",
     "\n",
     "# Number of channels to produce. With data aggregated, each channel \n",
@@ -50,11 +50,11 @@
    "outputs": [],
    "source": [
     "image = [\n",
-    "    [ 0.11,  0.12,  0.13,  0.14],\n",
-    "    [ 0.21,  0.22,  0.23,  0.24],\n",
-    "    [ 0.31,  0.32,  0.33,  0.34],\n",
-    "    [ 0.41,  0.42,  0.43,  0.44]\n",
-    "]"
+    "    [0.11, 0.12, 0.13, 0.14],\n",
+    "    [0.21, 0.22, 0.23, 0.24],\n",
+    "    [0.31, 0.32, 0.33, 0.34],\n",
+    "    [0.41, 0.42, 0.43, 0.44]\n",
+    "]\n"
    ]
   },
   {
@@ -99,8 +99,8 @@
    },
    "outputs": [],
    "source": [
-    "for channnel in convolution_layer1\n",
-    "    for filter in channel:\n",
+    "for channel in convolution_layer1:\n",
+    "    for filter_layer in channel:\n",
     "        pass\n",
     "        # Run filter over images"
    ]
