--- a/Convolutional.ipynb
+++ b/Convolutional.ipynb
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "# Filter is the block of data (pixels) to scan an image and produce a value\n",
-    "filter = (3,3)\n",
+    "filter_size = (3,3)\n",
     "\n",
     "# A grey scall image would have one, RGB would have 3\n",
     "input_channel = 1\n",
@@ -102,11 +102,11 @@
    "outputs": [],
    "source": [
     "image = [\n",
-    "    [ 0.11,  0.12,  0.13,  0.14],\n",
-    "    [ 0.21,  0.22,  0.23,  0.24],\n",
-    "    [ 0.31,  0.32,  0.33,  0.34],\n",
-    "    [ 0.50,  0.60,  0.70,  0.80]\n",
-    "]"
+    "    [0.11, 0.12, 0.13, 0.14],\n",
+    "    [0.21, 0.22, 0.23, 0.24],\n",
+    "    [0.31, 0.32, 0.33, 0.34],\n",
+    "    [0.50, 0.60, 0.70, 0.80]\n",
+    "]\n"
    ]
   },
   {
