Added description for conv networks.

--- a/Convolutional.ipynb
+++ b/Convolutional.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,17 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting data/train-images-idx3-ubyte.gz\n",
-      "Extracting data/train-labels-idx1-ubyte.gz\n",
-      "Extracting data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting data/t10k-labels-idx1-ubyte.gz\n"
+      "Extracting data/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting data/train-labels-idx1-ubyte.gz\nExtracting data/t10k-images-idx3-ubyte.gz\nExtracting data/t10k-labels-idx1-ubyte.gz\n"
      ]
     }
    ],
@@ -52,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -66,25 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Filter is the block of data (pixels) to scan an image and produce a value\n",
-    "filter_size = (3,3)\n",
+    "filter_size = [5, 5]\n",
     "\n",
     "# A grey scall image would have one, RGB would have 3\n",
     "input_channel = 1\n",
@@ -95,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -111,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -120,8 +113,11 @@
     "# Weights\n",
     "\n",
     "# Convolutional Layers\n",
-    "W1 = tf.Variable(tf.truncated_normal([5, 5, 1, 4], stddev=stddev))\n",
-    "B1 = tf.Variable(tf.ones([4])/10)\n",
+    "# 5x5x1x4\n",
+    "w_shape1 = filter_size + [input_channel] + [output_channel]\n",
+    "W1 = tf.Variable(tf.truncated_normal(w_shape1, stddev=stddev))\n",
+    "b_shape1 = [output_channel]\n",
+    "B1 = tf.Variable(tf.ones(b_shape1)/10)\n",
     "\n",
     "# L2\n",
     "W2 = tf.Variable(tf.truncated_normal([4, 4, 4, 8], stddev=stddev))\n",
@@ -142,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -196,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,49 +212,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.10299851,  0.10299851,  0.09700158,  0.09700149],\n",
-       "       [ 0.10299851,  0.10299851,  0.09700158,  0.09700149],\n",
-       "       [ 0.10299851,  0.10299851,  0.09700158,  0.09700149],\n",
-       "       [ 0.10299851,  0.10299851,  0.09700158,  0.09700149],\n",
-       "       [ 0.00075129,  0.21241914,  0.29284447,  0.02677534],\n",
-       "       [ 0.        ,  0.        ,  0.35825065,  0.        ],\n",
-       "       [ 0.        ,  0.        ,  0.30993539,  0.        ],\n",
-       "       [ 0.        ,  0.        ,  0.22142845,  0.        ],\n",
-       "       [ 0.        ,  0.        ,  0.45041776,  0.        ],\n",
-       "       [ 0.17468926,  0.        ,  0.48236859,  0.        ],\n",
-       "       [ 0.20934469,  0.00145258,  0.36810559,  0.        ],\n",
-       "       [ 0.25532031,  0.18649432,  0.09570371,  0.        ],\n",
-       "       [ 0.22195783,  0.35920435,  0.07332038,  0.        ],\n",
-       "       [ 0.        ,  0.30810893,  0.29266655,  0.        ],\n",
-       "       [ 0.        ,  0.        ,  0.4023014 ,  0.11701883],\n",
-       "       [ 0.        ,  0.        ,  0.208664  ,  0.07150308],\n",
-       "       [ 0.10487191,  0.        ,  0.18931778,  0.        ],\n",
-       "       [ 0.23488952,  0.        ,  0.26749054,  0.        ],\n",
-       "       [ 0.16703591,  0.09672935,  0.34080702,  0.        ],\n",
-       "       [ 0.11698063,  0.11335559,  0.13795939,  0.0640503 ],\n",
-       "       [ 0.10299851,  0.10299851,  0.09700158,  0.09700149],\n",
-       "       [ 0.10299851,  0.10299851,  0.09700158,  0.09700149],\n",
-       "       [ 0.10299851,  0.10299851,  0.09700158,  0.09700149],\n",
-       "       [ 0.10299851,  0.10299851,  0.09700158,  0.09700149],\n",
-       "       [ 0.10299851,  0.10299851,  0.09700158,  0.09700149],\n",
-       "       [ 0.10299851,  0.10299851,  0.09700158,  0.09700149],\n",
-       "       [ 0.10299851,  0.10299851,  0.09700158,  0.09700149],\n",
-       "       [ 0.10299851,  0.10299851,  0.09700158,  0.09700149]], dtype=float32)"
+       "(100, 28, 28, 4)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t[0][10]"
+    "t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    ""
    ]
   }
  ],
@@ -271,7 +258,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
