Added max pooling example.

--- a/tensor_ann_tutorial.ipynb
+++ b/tensor_ann_tutorial.ipynb
@@ -176,7 +176,11 @@
    },
    "source": [
     "### Loss Function (V1-3)\n",
-    "Calculates the loss by comparing the tagert and prediction\n"
+    "Calculates the loss by comparing the target and prediction.\n",
+    "\n",
+    "There are many ways to compute loss and the result of this function will determine how off the prediction was.\n",
+    "\n",
+    "* Reduced Mean of: | `Y_ * tf.log(Y)` \n"
    ]
   },
   {
@@ -193,8 +197,10 @@
    "metadata": {},
    "source": [
     "### Optimizer (V1-3)\n",
-    "Back-propagation function for adjusting weights and biases\n",
-    "* Uses Gradient Descent"
+    "This loss calculated above will be fed into the optimaizer. The greater the loss metric, the bigger increase to the weights and biases with error.\n",
+    "* Back-propagation function for adjusting weights and biases\n",
+    "* Uses Gradient Descent\n",
+    "\n"
    ]
   },
   {
@@ -242,7 +248,10 @@
     "init = tf.global_variables_initializer()\n",
     "\n",
     "sess = tf.Session()\n",
-    "sess.run(init)"
+    "sess.run(init)\n",
+    "\n",
+    "# AN interactive session\n",
+    "# sess = tf.InteractiveSession()"
    ]
   },
   {
